--- a/index.css
+++ b/index.css
@@ -1,15 +1,13 @@
 *{
-    border-color: rgba(0,0,0,0);
     border-style: solid;
-    margin: 0;
-    padding: 0p;
+    border-color:rgba(0,0,0,0);
+    margin: 0px;
+    padding: 0px;
 }
 body{
-    display: block;
     border-width: 0px 33vw;
 }
 h1{
-    display: inline-block;
     font-weight: 900;
     font-family: 'Merriweather', serif;
     border-width: 30px 0px 0px 25px;
@@ -81,13 +79,12 @@ article{
     width: 625px;
     background: lightgray;
 }
-#articleOne{
+.articleOne{
     background-image: url(./assets/žuta.jpg);
 }
-#articleTwo{
-    background-image: url(./assets/roza.jpg);
-    
+.articleTwo{
+    background-image: url(./assets/roza.jpg);  
 }
-#articleThree{
+.articleThree{
     background-image: url(./assets/telefon.jpg);
 }
